--- a/example-deployment.yaml
+++ b/example-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: example-deployment
   name: example-deployment
+  namespace: colors
 spec:
   replicas: 2
   selector:
@@ -16,6 +17,6 @@ spec:
     spec:
       containers:
         - name: example-deployment
-          image: nginx
+          image:
           ports:
             - containerPort: 80
