--- a/example-ingress.yaml
+++ b/example-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: nginx-ingress
+  name: -ingress
   annotations:
     nginx.ingress.kubernates.io/rewrite-target: /
 spec:
