--- a/example-service.yaml
+++ b/example-service.yaml
@@ -5,9 +5,10 @@ metadata:
   labels:
     app: example-service
 spec:
+  type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 8081
+      targetPort: 8081
+      nodePort: 30080
   selector:
     app: example-service
-  type: NodePort
