--- a/example-service.yaml
+++ b/example-service.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: example-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 8081
       targetPort: 8081
-      nodePort: 30080
   selector:
     app: example-service
+    version: blue
